Spacing fixed on mobile view for visit us

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,6 +437,10 @@ iframe {
   .opening-times-image-container {
       display: none;
   }
+
+  .opening-times-container {
+      padding-top: 20px;
+  }
   
 }
 
